# Project-Spartan

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeCache.txt  CMakeLists.txt  CODE_STYLE_GUIDELINES.md  CodeConventions.md  LICENSE.txt  Makefile  README.md  Spartan.tar.xz  binkload.sh  build  build.sh  clion-spartan-code-style.xml  clion.xml  cmake_install.cmake  debug  font  gdb.txt  install-curlpp.sh  load  load.sh  rbinkload.sh  rload.sh  uload  uload.sh  update
.circleci/: config.yml
Aero/: .gitignore  build.gradle  settings.gradle
Aero/gradle/wrapper/: gradle-wrapper.properties
ID/: pSecret
UserHalp/: HELLOOOOHELPME.md
assets/img/: gas.txt  speedometer.txt
backup/: binkalnx64.asi
cmake/: FindCURLpp.cmake  FindSDL2_image.cmake
configs/ikf3/PINGU_4ultralegit/: config.json
nbproject/: configurations.xml  project.xml
src/: EventListener.h  Project-Spartan.cpp  config.cpp  config.h  fonts.cpp  fonts.h  glhook.cpp  glhook.h  hooker.cpp  hooker.h  interfaces.cpp  interfaces.h  modsupport.cpp  modsupport.h  offsets.cpp  offsets.h  project-spartan.h  protection.cpp  protection.h  settings.cpp  settings.cpp~  settings.h  settings.h~  shortcuts.cpp  shortcuts.h
src/ATGUI/: ID'S  atgui.cpp  atgui.cpp~  atgui.h  atguielements.cpp
src/ATGUI/Tabs/: aimbottab.cpp  aimbottab.h  hvhtab.cpp  hvhtab.cpp~  hvhtab.h  misctab.cpp  otherstab.cpp  otherstab.h  visualstab.cpp
src/ATGUI/Windows/: configs.h  login.h  main.h
src/Hacks/: .resolver.cpp.swp  13, 13, 13, 246 -> MAIN  aimbot.cpp  aimbot.h  airstuck.cpp  airstuck.h  angleindicator.cpp  angleindicator.h  antiaim.cpp  antiaim.cpp~  antiaim.h  asuswalls.cpp  asuswalls.h  autoaccept.cpp  autoaccept.h  autoblock.cpp  autoblock.h  autodefuse.cpp  autodefuse.h  autoknife.cpp  autoknife.h  autostrafe.cpp  autostrafe.h  autowall.cpp  autowall.h  backtracking.cpp  backtracking.h  bhop.cpp  bhop.h  chams.cpp  chams.h  chokepackets.cpp  chokepackets.h  circlestrafe.cpp  circlestrafe.h  clantagchanger.cpp  clantagchanger.h  customglow.cpp  customglow.h  disablepostprocessing.cpp  (+75 more)
src/Hooks/: BeginFrame.cpp  CreateMove.cpp  DrawModelExecute.cpp  EmitSound.cpp  FireEvent.cpp  FireEventClientSide.cpp  FrameStageNotify.cpp  GetViewModelFOV.cpp  IN_KeyEvent.cpp  OnScreenSizeChanged.cpp  OverrideConfig.cpp  OverrideView.cpp  Paint.cpp  PaintTraverse.cpp  PlaySound.cpp  ProcessMovement.cpp  PumpWindowsMessageLoop.cpp  RenderSmokePostViewmodel.cpp  RenderView.cpp  SetKeyCodeState.cpp  SetMouseCodeState.cpp  ShouldDrawFog.cpp  hooks.h
src/ImGUI/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_internal.h  stb_rect_pack.h  stb_textedit.h  stb_truetype.h
src/ImGUI/IconsFontAmazing/: GenerateIconFontCppHeaders.py  requests  yaml
src/ImGUI/examples/allegro5_example/: imgui_impl_a5.cpp  imgui_impl_a5.h  main.cpp
src/ImGUI/examples/directx10_example/: imgui_impl_dx10.cpp  imgui_impl_dx10.h  main.cpp
src/ImGUI/examples/directx11_example/: imgui_impl_dx11.cpp  imgui_impl_dx11.h  main.cpp
src/ImGUI/examples/directx9_example/: imgui_impl_dx9.cpp  imgui_impl_dx9.h  main.cpp
src/ImGUI/examples/marmalade_example/: imgui_impl_marmalade.cpp  imgui_impl_marmalade.h  main.cpp
src/ImGUI/examples/opengl2_example/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  main.cpp
src/ImGUI/examples/opengl3_example/: imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.h  main.cpp
src/ImGUI/examples/sdl_opengl2_example/: imgui_impl_sdl.cpp  imgui_impl_sdl.h  main.cpp
src/ImGUI/examples/sdl_opengl3_example/: imgui_impl_sdl_gl3.cpp  imgui_impl_sdl_gl3.h  main.cpp
src/ImGUI/examples/vulkan_example/: CMakeLists.txt  imgui_impl_glfw_vulkan.cpp  imgui_impl_glfw_vulkan.h  main.cpp
src/ImGUI/extra_fonts/: binary_to_compressed_c.cpp  skrrtmenufont.sfd
src/ImGUI/fonts/: 3.h  4.h  BOLDFONT.h  RobotoMonoRegular.h  Tux.h  Tux2.h
src/Protection/: Protection.cpp  Protection.h
src/SDK/: CBaseClientState.h  CCSGameRules.h  CEffects.h  CGameServer.h  CGlobalVars.h  CGlowObjectManager.h  CInput.h  CPlayerResource.h  CTickRecord.h  CUtlMemory.h  CUtlVector.h  CViewRender.h  IAppSystem.h  IBaseClientDLL.h  IClientEntity.h  IClientEntityList.h  IClientMode.h  ICommandLine.h  ICvar.h  IEngineClient.h  IEngineSound.h  IEngineTrace.h  IEngineVGui.h  IGameEvent.h  IGameMovement.h  IInputSystem.h  ILauncherMgr.h  ILocalize.h  IMDLCache.h  IMaterial.h  IMaterialSystem.h  INetChannel.h  IPhysicsSurfaceProps.h  IPlayeranimstate.h  IPrediction.h  ISurface.h  IVDebugOverlay.h  IVModelInfo.h  IVModelRender.h  IVPanel.h  (+10 more)
src/SpartanGUI/: SegoeUI.h  Spartan.h  SpartanGui.cpp  SpartanGui.h  Spartangui.cpp  Spartangui.h  Spartanguielements.cpp  arial.h  imgui.h
src/SpartanGUI/Tabs/: aimbottab.cpp  aimbottab.h  aimtab.cpp  aimtab.h  hvhtab.cpp  hvhtab.h  lbytab.cpp  lbytab.h  misctab.cpp  misctab.h  modelstab.cpp  modelstab.h  otherstab.cpp  otherstab.h  settingstab.cpp  settingstab.h  skinstab.cpp  skinstab.h  triggerbottab.cpp  triggerbottab.h  visualstab.cpp  visualstab.h
src/SpartanGUI/Tabs/AimTabs/: aimbotaimtab.cpp  aimbotaimtab.h  triggerbotaimtab.cpp  triggerbotaimtab.h
src/SpartanGUI/Tabs/HvHTabs/: airbornehvhtab.cpp  airbornehvhtab.h  mischvhtab.cpp  mischvhtab.h  movinghvhtab.cpp  movinghvhtab.h  standinghvhtab.cpp  (+1 more)
src/SpartanGUI/Windows/: colors.cpp  colors.h  configs.cpp  configs.h  fonts.cpp  fonts.h  login.cpp  login.h  main.cpp  main.h  playerlist.cpp  playerlist.h  resolverinfo.cpp  resolverinfo.h  skinmodelchanger.cpp  skinmodelchanger.h  walk.h
src/Utils/: draw.cpp  draw.h  entity.cpp  entity.h  image.cpp  image.h  math.cpp  math.h  netvarmanager.cpp  netvarmanager.h  patternfinder.cpp  patternfinder.h  picosha2.h  protectionutil.cpp  protectionutil.h  pstring.h  recvproxyhook.h  skins.cpp  skins.h  sound.cpp  sound.h  util.cpp  util.h  util_items.cpp  util_items.h  util_sdk.cpp  util_sdk.h  vmt.h  xorstring.h
src/assets/img/: needle.txt  oil.txt  output1.txt  rearmirror.txt  wheel.txt  whileyouwait.txt
src/assets/sound/: hitsound.txt
src/json/: json-forwards.h  json.h  jsoncpp.cpp
(+22 files in other folders)
